syntax = "proto3";

package pb.unit.cosine_similarity;
option go_package = "github.com/aglide100/dak-keyword/pb/unit/cosine_similarity";

message CosineSimilarity {
    uint64 cosine_similarity_id = 1;
    string worker_id = 2;
    repeated int64 column_id = 3;
    repeated int64 row_id = 4;
    repeated double score = 5;
}